# tonk

./: .gitignore  CMakeLists.txt  Counter.h  Doxyfile.txt  MappedFile.cpp  MappedFile.h  PacketAllocator.h  PacketCompression.cpp  PacketCompression.h  README.md  SiameseCommon.cpp  SiameseCommon.h  SiameseDecoder.cpp  SiameseDecoder.h  SiameseEncoder.cpp  SiameseEncoder.h  SiameseSerializers.h  SimpleCipher.cpp  SimpleCipher.h  StrikeRegister.cpp  StrikeRegister.h  TonkCppSDK.cpp  TonkCppSDK.h  TonkineseBandwidth.cpp  TonkineseBandwidth.h  TonkineseConnection.cpp  TonkineseConnection.h  TonkineseFirewall.cpp  TonkineseFirewall.h  TonkineseFlood.cpp  TonkineseFlood.h  TonkineseIncoming.cpp  TonkineseIncoming.h  TonkineseInterfaces.h  TonkineseMaps.cpp  TonkineseMaps.h  TonkineseNAT.cpp  TonkineseNAT.h  TonkineseOutgoing.cpp  TonkineseOutgoing.h  (+24 more)
dll/: Tonk.DLL.README.txt
docs/: CCTest.cpp  CCTest.h  HolePunch.README.txt  StatsCode.txt  attic_TonkineseBandwidth.cpp  attic_TonkineseBandwidth.h  attic_tcp_code.txt  attic_thread_code.txt  attic_udp_code.txt  idea_cc_sync_twiddle.txt  ideas.txt  linear_trend.txt
proj/: Tonk.sln  TonkClientTest.sln  TonkLib.vcxproj  TonkLib.vcxproj.filters  TonkUnitTest.sln  TonkZstd.vcxproj  TonkZstd.vcxproj.filters
sdk/: Tonk.SDK.README.txt
sdk/cpp/: Tonk.CppSDK.README.txt
sdk/csharp/: Tonk.CsharpSDK.README.txt  TonkCSharpSDK.cs
sdk/csharp/tests/TonkClientTest/: CSharpClientTest.sln  Program.cs  TonkCSharpSDK.cs  TonkClientTest.csproj  TonkTestTools.cs
sdk/csharp/tests/TonkClientTest/Properties/: AssemblyInfo.cs
sdk/csharp/tests/TonkServerTest/: CSharpServerTest.sln  Program.cs  TonkServerTest.csproj  TonkTestTools.cs
sdk/nodejs/: Tonk.NodeJsSDK.README.txt  binding.gyp  tonk.js
sdk/nodejs/tonk_client_test/: binding.gyp  package.json  tonk.js
sdk/nodejs/tonk_client_test/src/: tonk.cc
tests/: BandwidthControlTest.cpp  BandwidthControlTest.h  FileReceiver.cpp  FileSender.cpp  P2PFileReceiver.cpp  P2PFileSender.cpp  P2PRendezvousServer.cpp  TonkP2PClientTest.cpp  TonkP2PClientTest.vcxproj  TonkP2PClientTest.vcxproj.filters  TonkServerTest.cpp  TonkServerTest.vcxproj  TonkServerTest.vcxproj.filters  TonkTestTools.cpp  TonkTestTools.h  TonkUnitTest.cpp  TonkUnitTest.vcxproj  TonkUnitTest.vcxproj.filters  graph_stats.html
tests/mau/: MauProxy.cpp  MauProxy.h  MauTools.cpp  MauTools.h  README.md  mau.cpp  mau.h
